--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,29 +1,32 @@
 .nav-wrapper {
-    width: 1200px;
+    width: 100%;
     height: 90px;
     position: absolute;
     top: 0;
     left: 0;
     display: flex;
-    flex-direction: row;
-    z-index: 1;
+    /* flex-direction: row; */
+    z-index: 100;
+    background: #fff;
+
 }
 
-
-@media (min-width: 768px) and (max-width: 900px) {
-    .nav-wrapper {
-        width: 900px;
-        background: #ffe400;
-    }
+.toggle{
+    font-size: 35px;
+    visibility: hidden;
+    display: inline-block;
+    position: absolute;
+    top: 20px;
+    right: 30px;
 }
 
 
 .logo {
     font-size: 12px;
     background: #ffe400;
-    color: #29648a;
-    width: 230px;
-    height: 100%;
+    /* color: #29648a; */
+    /* width: 80%; */
+    /* height: 100%; */
 }
 
 /*-----------*/
@@ -40,10 +43,10 @@ nav {
     align-items: center;
     justify-content: space-around;
     width: 100%;
-    background-color: #FFF;
+    background-color: #fff;
 }
 
-nav a {
+.nav-link {
     color: #B1B1B1;
     text-decoration: none;
     display: flex;
@@ -51,10 +54,66 @@ nav a {
     transition: color 1s ease;
 }
 
-nav a:hover {
-    color: #1D1D1D;
+.nav-link:hover {
+    color: #ffe400;
 }
 
-.active {
+/* .active {
     color: #1D1D1D;
+} */
+
+.js-active{
+    display: block;
+    height: 230px;
+}
+
+@media screen and (max-width: 600px) {
+    
+    .logo {
+        font-size: 8px;
+        width: 150px !important;
+    }
+    
+    .nav-link {
+        width: 150px;
+        font-size: 22px;
+        margin-bottom: 5px; 
+    }
+
+    nav{
+        flex-direction: column;
+        display: none;
+        width: 300px;
+        padding-top: 100px;
+        /* margin-top: 100px; */
+    }
+    .toggle{
+        visibility: visible;
+        cursor: pointer;
+        position: absolute;
+        top: 20px;
+        right: 35px;
+    }
+} 
+
+/* @media screen and (max-width: 768px){
+    .logo{
+        font-size: 10px;
+        width: 40% !important;
+    }
+
+    nav{
+        flex-direction: column;
+    }
+    .toggle{
+        visibility: visible;
+        cursor: pointer;
+        position: absolute;
+        top: 10px;
+        right: 20px;
+    }
+} */
+
+.js-active{
+    display: block;
 }
