--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,6 @@
     align-items: center;
 }
 
-@media only screen and (max-width: 600px) {
+/* @media only screen and (max-width: 600px) {
     * {
-        overflow: visible;
-    }
-} 
+        /* overflow: visible; */
