--- a/css/text-section.css
+++ b/css/text-section.css
@@ -4,10 +4,12 @@
 }
 
 .column-wrapper section {
-    display: flex;
+    /* display: flex; */
 }
 
 .text-section {
+    margin-top: 100px;
+
     flex: 1;
     flex-direction: column;
     justify-content: center;
@@ -15,34 +17,11 @@
     padding-left: 70px;
 }
 
-
-
-@media (min-width: 768px) and (max-width: 900px) {
-    .text-section {
-        padding-left: 0px;
-    }
-}
-
-
-
-
-
-
 .text-section h1 {
     text-align: center;
     font-size: 62px;
     width: 490px;
     margin-bottom: 50px;
-}
-
-
-@media (min-width: 768px) and (max-width: 900px) {
-    .text-section h1 {
-        font-size: 30px;
-        width: 353px;
-        margin-bottom: -5px;
-        text-align: left;
-    }
 }
 
 
@@ -57,13 +36,6 @@
     text-align: center;
 }
 
-
-@media (min-width: 768px) and (max-width: 900px) {
-    .text-section p {
-
-        margin-bottom: 20px;
-    }
-}
 
 
 
@@ -100,4 +72,35 @@
     text-decoration: none;
     font-size: 32px;
     color: #FFC001;
+}
+
+
+
+@media screen and (max-width: 600px) {
+
+    .column-wrapper{
+        /* width: 50%; */
+        /* padding-top: 100px; */
+    }
+    .text-section {
+        padding-left: 15px;
+        /* padding-top: 10px; */
+    }
+
+    .text-section h1 {
+        font-size: 30px;
+        /* width: 353px; */
+        /* margin-bottom: -5px; */
+        text-align: left;
+        width: 50%;
+    }
+
+    .text-section p {
+        font-size: 20px;
+        text-align: left;
+        margin-left: 0;
+        margin-bottom: 15px;
+
+        /* margin-top: 100px; */
+    }
 }
